--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
         </div>
         <!--end popup -->
 
-        <!-- <section class="gid-test">
+        <!-- <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
                     Col 1 of 2
